--- a/Exercicios/index.html
+++ b/Exercicios/index.html
@@ -5,9 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funções JS</title>
-    <script src="/Exercicios/script.js" defer></script>
+    
+    <style>
+        /* main{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        div{
+            display: flex;
+            justify-content: center;
+            border: solid 10px red;
+            width: 450px;
+            height: 550px;
+            align-items: center;
+            flex-direction: column;
+        }
+        div h1{
+            margin-bottom: 20px;
+        }
+        span{
+            display:flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column; 
+            font-size: medium;
+            font-weight: bold;
+        }
+        button{
+            background-color: black;
+            color: white;
+            border-radius: 10px;
+            padding: 10px;
+            cursor: pointer;
+            margin-top: 50px;
+        }
+        button:hover{
+            background-color: red;
+            color: black;
+            border-radius: 200px;
+        } */
+
+    </style>
 </head>
 <body>
-    
+      <!-- <main>
+          <div>
+            <h1>Turma FS0910</h1>
+            <span id="tela"></span>
+            <button onclick="Catraca('00:30')">Clique aqui!</button>
+          </div>
+      </main> -->
+      <script src="/script.js" ></script>
 </body>
 </html>
